# qq-literals

./: .gitignore  LICENSE  README.md  changelog.md  qq-literals.cabal  stack.yaml
src/: QQLiterals.hs
test/: Spec.hs
test/Spec/: Example.hs
