name:                qq-literals
version:             0.1.0.0
synopsis:            Compile-time checked literal values via QuasiQuoters.
description:         Compile-time checked literal values via QuasiQuoters.
homepage:            https://github.com/hdgarrood/qq-literals
license:             MIT
license-file:        LICENSE
author:              Harry Garrood
maintainer:          harry@garrood.me
copyright:           2016 Harry Garrood
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:

library
  hs-source-dirs:      src
  exposed-modules:     QQLiterals
  build-depends:       base >= 4.7 && < 5,
                       template-haskell == 2.10.*
  default-language:    Haskell2010

test-suite qq-literals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spec.Example
  build-depends:       base,
                       qq-literals,
                       template-haskell,
                       network-uri
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hdgarrood/qq-literals
